finally after center aligning issue resolved

--- a/styles.css
+++ b/styles.css
@@ -121,17 +121,17 @@ color: #16171f;
 .crayoncarving-details {
   background-color: #01BAEF;
   color: #16171f;
-  padding: 15px 55px 15px 55px;
+  text-align: center;
 }
 .modelmaking-details {
   background-color:#7FC29B;
   color: #16171f;
-  padding: 15px 55px 15px 55px;
+  text-align: center;
 }
 .woodcarving-details {
   background-color: #FCA311;
   color: #16171f;
-  padding: 15px 55px 15px 55px;
+  text-align: center;
 }
 
 /* CONTACT INFO
@@ -164,7 +164,7 @@ footer {
     float: left;
     margin-right: 20px;
   }
-  hobby-item {
+  .painting-item {
     display: grid;
     grid-template-columns: 1fr 2fr;
     column-gap: 20px;
@@ -177,7 +177,7 @@ footer {
     width: 300px;
       /* min-height: 300px; */
      }
-}
+
 @media screen and (max-width: 749px) {
   h1 {
     font-size: 75px;
@@ -194,5 +194,8 @@ h2 {
 }
 .contact-list a {
   padding: 5px;
+}
+h3 {
+  font-size: 75px;
 }
 }
